# cyclonedds

./: CMakeLists.txt  azure-pipelines.yml  conanfile.txt
.azure/templates/: build-test.yml
cmake/Modules/: CUnit.cmake
docs/dev/: virtual_interface.md
docs/manual/: options.md
docs/manual/config/: config_file_reference.rst
etc/: cyclonedds.rnc  cyclonedds.xsd
examples/: CMakeLists.txt
examples/helloworld/: HelloWorldData.idl  publisher.c  subscriber.c
examples/shm_throughput/: shmpublisher.c
fuzz/fuzz_handle_rtps_message/: fuzz_handle_rtps_message.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/cdr/src/: dds_cdrstream.c
src/core/ddsc/: CMakeLists.txt
src/core/ddsc/include/dds/: dds.h
src/core/ddsc/include/dds/ddsc/: dds_loan.h  dds_loan_api.h  dds_opcodes.h  dds_public_impl.h  dds_public_qos.h  dds_public_qosdefs.h  dds_rhc.h  dds_virtual_interface.h
src/core/ddsc/src/: dds__data_allocator.h  dds__loan.h  dds__qos.h  dds__types.h  dds__virtual_interface.h  dds__writer.h  dds_data_allocator.c  dds_domain.c  dds_entity.c  dds_loan.c  dds_qos.c  dds_read.c  dds_reader.c  dds_rhc.c  dds_rhc_default.c  dds_serdata_builtintopic.c  dds_topic.c  dds_virtual_interface.c  dds_write.c  dds_writer.c  shm_monitor.c
src/core/ddsc/tests/: CMakeLists.txt  VIDataModels.idl  asymdisconnect.c  basic.c  builtin_topics.c  cdr.c  cdrstream.c  config.c  config_env.h.in  config_virtual_interfaces.xml  data_avail_stress.c  data_representation.c  deadline.c  destorder.c  discstress.c  dispose.c  iceoryx.c  liveliness.c  loan.c  multi_sertopic.c  multi_sertype.c  reader_iterator.c  test_oneliner.c  topic_discovery.c  virtual_interface.c  write_various_types.c
src/core/ddsi/: CMakeLists.txt  defconfig.c
src/core/ddsi/include/dds/ddsi/: ddsi_cfgelems.h  ddsi_config.h  ddsi_domaingv.h  ddsi_endpoint.h  ddsi_locator.h  ddsi_plist.h  ddsi_protocol.h  ddsi_proxy_endpoint.h  ddsi_serdata.h  ddsi_sertype.h  ddsi_shm_transport.h  ddsi_virtual_interface.h  ddsi_virtual_interface_loader.h  ddsi_xqos.h  ddsi_xt_typeinfo.h  q_entity.h  q_xmsg.h
src/core/ddsi/src/: ddsi__cfgelems.h  ddsi_config.c  ddsi_deliver_locally.c  ddsi_endpoint.c  ddsi_entity_match.c  ddsi_init.c  ddsi_ipaddr.c  ddsi_mcgroup.c  ddsi_ownip.c  ddsi_participant.c  ddsi_plist.c  ddsi_proxy_endpoint.c  ddsi_serdata.c  ddsi_serdata_default.c  ddsi_sertype.c  ddsi_sertype_default.c  ddsi_shm_transport.c  ddsi_tcp.c  ddsi_udp.c  ddsi_virtual_interface.c  ddsi_virtual_interface_loader.c  ddsi_vnet.c  ddsi_wraddrset.c  ddsi_xmsg.c  q_config.c  q_ddsi_discovery.c  q_entity.c  q_init.c  q_qosmatch.c  q_receive.c  q_xmsg.c
src/core/ddsi/tests/: locators.c
src/core/xtests/rhc_torture/: CMakeLists.txt  rhc_torture.c
src/core/xtests/symbol_export/: symbol_export.c
src/ddsrt/: CMakeLists.txt
src/ddsrt/include/dds/: features.h.in
src/ddsrt/include/dds/ddsrt/: heap.h
src/ddsrt/src/: cdtors.c
src/ddsrt/src/heap/: heap.c
src/ddsrt/src/heap/freertos/: heap.c
src/ddsrt/src/heap/posix/: heap.c
src/ddsrt/src/heap/vxworks/: heap.c
src/ddsrt/tests/: environ.c  heap.c
src/idl/: CMakeLists.txt
src/idl/include/idl/: auto.h  expression.h  file.h  idl_ostream.h  processor.h  retcode.h  scope.h  stream.h  string.h  symbol.h  tree.h  typetree.h  visit.h
src/idl/src/: annotation.c  annotation.h  auto.c  config.h.in  directive.c  directive.h  expression.c  expression.h  file.c  file.h  hashid.c  hashid.h  idl_ostream.c  parser.y  processor.c  scanner.c  scanner.h  scope.c  scope.h  stack_direction.c  stream.c  string.c  symbol.c  symbol.h  table.c  table.h  thread.c  tree.c  tree.h  typetree.c  visit.c
src/idl/tests/: CMakeLists.txt  annotation.c  enum.c  expression.c  file.c  idl_ostream.c  inheritance.c  module.c  parser.c  pragma.c  scanner.c  typedef.c  union.c  visit.c
src/security/core/tests/: CMakeLists.txt  access_control.c  authentication.c  crypto.c  handshake.c  secure_communication.c
src/tools/: CMakeLists.txt
src/tools/ddsperf/: ddsperf.c
src/tools/idlc/: CMakeLists.txt  Generate.cmake  dummy.c  generator.c  generator.h  idlc.c
src/tools/idlc/include/: idl_defs.h
src/tools/idlc/include/generator_common/: common.h  descriptor_type_meta.h
src/tools/idlc/include/idl_meta/: descriptor_type_meta.h
src/tools/idlc/include/libidlc/: descriptor_type_meta.h  generator.h  idl_defs.h  libidlc_generator.h
src/tools/idlc/src/: descriptor.c  descriptor.h  descriptor_type_meta.c  descriptor_type_meta.h  directive.c  generator.c  generator.h  idl.c  idl.h  idlc.c  main.c  opcodes.old.c  options.c  options.h  parser.y  plugin.c  plugin.h  scanner.c  types.c  types.h  typetree.h
src/tools/idlc/src/generator_common/: common.c  descriptor_type_meta.c
src/tools/idlc/src/idlc/: idlc.c
src/tools/idlc/src/libidlc/: descriptor.c  generator.c  libidlc__descriptor.c  libidlc__descriptor.h  libidlc__generator.h
src/tools/idlc/tests/: CMakeLists.txt  descriptor.c  fmemopen.c  scanner.c  test_common.h  type_meta.c
src/tools/idlpp/src/: configed.H.in  system.c
src/tools/iox/: CMakeLists.txt
src/tools/iox/inc/: iox_interface.h
src/tools/iox/src/: iox_interface.c
